--- a/NLP text classification model Github.ipynb
+++ b/NLP text classification model Github.ipynb
@@ -9,25 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/rasello-ai/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /home/rasello-ai/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n",
-      "[nltk_data] Downloading package wordnet to /home/rasello-\n",
-      "[nltk_data]     ai/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,7 +24,7 @@
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
+    "# from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import SnowballStemmer\n",
     "from nltk.corpus import wordnet\n",
     "from nltk.stem import WordNetLemmatizer\n",
@@ -52,17 +36,17 @@
     "#for model-building\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.linear_model import SGDClassifier\n",
+    "# from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import classification_report, f1_score, accuracy_score, confusion_matrix\n",
     "from sklearn.metrics import roc_curve, auc, roc_auc_score\n",
     "\n",
     "# bag of words\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "#for word embedding\n",
-    "import gensim\n",
+    "# import gensim\n",
     "from gensim.models import Word2Vec #Word2Vec is mostly used for huge datasets"
    ]
   },
@@ -182,7 +166,7 @@
    "source": [
     "#you can download the data from https://www.kaggle.com/c/nlp-getting-started/data\n",
     "import os\n",
-    "# os.chdir('/Users/ranivija/Desktop/')\n",
+    "os.chdir('/Users/ranivija/Desktop/')\n",
     "df_train=pd.read_csv('train.csv')\n",
     "print(df_train.shape)\n",
     "df_train.head()"
@@ -816,7 +800,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -852,46 +840,6 @@
     "final=df_test[['id','target']].reset_index(drop=True)\n",
     "final.to_csv('submission.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "pip freeze -> requirements.txt"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
